--- a/collage.html
+++ b/collage.html
@@ -189,7 +189,7 @@ function loadShit(images_month) {
 	<script>
 window.fbAsyncInit = function() {
   FB.init({
-    appId: '444061909012734',
+    appId: '177552582431494',
     status: true,
     cookie: true,
     xfbml: true,
@@ -288,7 +288,7 @@ window.fbAsyncInit = function() {
 (function() {
   var e = document.createElement('script');
   e.async = true;
-  e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+  e.src = 'https://connect.facebook.net/en_US/all.js';
   document.getElementById('fb-root').appendChild(e);
 }());
 </script>
